commit before changing llm code

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -69,7 +69,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "qa-platform",
+   "display_name": "infonomy",
    "language": "python",
    "name": "python3"
   },
