--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,34 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0f779d3d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from sqlmodel import Session, select\n",
-    "from models import User, Question, Answer\n",
-    "\n",
-    "user0 = {\"username\": \"user0\", \"email\": \"user0@gmail.com\", \"password\": \"blingblong\"}\n",
-    "user1 = {\"username\": \"user1\", \"email\": \"user1@gmail.com\", \"password\": \"blingblong\"}\n",
-    "user2 = {\"username\": \"user2\", \"email\": \"user2@gmail.com\", \"password\": \"blingblong\"}\n",
-    "user3 = {\"username\": \"user3\", \"email\": \"user3@gmail.com\", \"password\": \"blingblong\"}\n",
-    "user4 = {\"username\": \"user4\", \"email\": \"user4@gmail.com\", \"password\": \"blingblong\"}\n",
-    "user5 = {\"username\": \"user5\", \"email\": \"user5@gmail.com\", \"password\": \"blingblong\"}\n",
-    "user6 = {\"username\": \"user6\", \"email\": \"user6@gmail.com\", \"password\": \"blingblong\"}\n",
-    "\n",
-    "users = [user0, user1, user2, user3, user4, user5, user6]"
+    "from infonomy_server.models import User, HumanBuyer, HumanSeller\n",
+    "from infonomy_server.schemas import HumanBuyerCreate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e668bfba",
+   "metadata": {},
+   "source": [
+    "# 1. User registration"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "736f1360",
+   "id": "a76f5d2b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registration of user0: 500\n"
+     ]
+    },
+    {
+     "ename": "JSONDecodeError",
+     "evalue": "Expecting value: line 1 column 1 (char 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
+      "File \u001b[0;32m~/gdrive/Gittable/code/infonomy/.venv/lib/python3.10/site-packages/requests/models.py:976\u001b[0m, in \u001b[0;36mResponse.json\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    975\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 976\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcomplexjson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtext\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    977\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m JSONDecodeError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    978\u001b[0m     \u001b[38;5;66;03m# Catch JSON-related errors and raise as requests.JSONDecodeError\u001b[39;00m\n\u001b[1;32m    979\u001b[0m     \u001b[38;5;66;03m# This aliases json.JSONDecodeError and simplejson.JSONDecodeError\u001b[39;00m\n",
+      "File \u001b[0;32m/usr/local/python3.10/lib/python3.10/json/__init__.py:346\u001b[0m, in \u001b[0;36mloads\u001b[0;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    343\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[1;32m    344\u001b[0m         parse_int \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m parse_float \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[1;32m    345\u001b[0m         parse_constant \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_pairs_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kw):\n\u001b[0;32m--> 346\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_default_decoder\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    347\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "File \u001b[0;32m/usr/local/python3.10/lib/python3.10/json/decoder.py:337\u001b[0m, in \u001b[0;36mJSONDecoder.decode\u001b[0;34m(self, s, _w)\u001b[0m\n\u001b[1;32m    333\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[1;32m    334\u001b[0m \u001b[38;5;124;03mcontaining a JSON document).\u001b[39;00m\n\u001b[1;32m    335\u001b[0m \n\u001b[1;32m    336\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m--> 337\u001b[0m obj, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraw_decode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m_w\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    338\u001b[0m end \u001b[38;5;241m=\u001b[39m _w(s, end)\u001b[38;5;241m.\u001b[39mend()\n",
+      "File \u001b[0;32m/usr/local/python3.10/lib/python3.10/json/decoder.py:355\u001b[0m, in \u001b[0;36mJSONDecoder.raw_decode\u001b[0;34m(self, s, idx)\u001b[0m\n\u001b[1;32m    354\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m--> 355\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m JSONDecodeError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpecting value\u001b[39m\u001b[38;5;124m\"\u001b[39m, s, err\u001b[38;5;241m.\u001b[39mvalue) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    356\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m obj, end\n",
+      "\u001b[0;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 26\u001b[0m\n\u001b[1;32m     24\u001b[0m         response \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mpost(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttp://localhost:8000/auth/register\u001b[39m\u001b[38;5;124m\"\u001b[39m, json\u001b[38;5;241m=\u001b[39muser)\n\u001b[1;32m     25\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRegistration of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00muser[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124musername\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresponse\u001b[38;5;241m.\u001b[39mstatus_code\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 26\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[43mresponse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjson\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# Login\u001b[39;00m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, user \u001b[38;5;129;01min\u001b[39;00m USERS\u001b[38;5;241m.\u001b[39mitems():\n",
+      "File \u001b[0;32m~/gdrive/Gittable/code/infonomy/.venv/lib/python3.10/site-packages/requests/models.py:980\u001b[0m, in \u001b[0;36mResponse.json\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    976\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m complexjson\u001b[38;5;241m.\u001b[39mloads(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtext, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m    977\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m JSONDecodeError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    978\u001b[0m     \u001b[38;5;66;03m# Catch JSON-related errors and raise as requests.JSONDecodeError\u001b[39;00m\n\u001b[1;32m    979\u001b[0m     \u001b[38;5;66;03m# This aliases json.JSONDecodeError and simplejson.JSONDecodeError\u001b[39;00m\n\u001b[0;32m--> 980\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m RequestsJSONDecodeError(e\u001b[38;5;241m.\u001b[39mmsg, e\u001b[38;5;241m.\u001b[39mdoc, e\u001b[38;5;241m.\u001b[39mpos)\n",
+      "\u001b[0;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)"
+     ]
+    }
+   ],
    "source": [
-    "# Registration\n",
+    "REGISTER = True\n",
+    "\n",
+    "# Define user data\n",
+    "USERS = {\n",
+    "    \"0\": {\"username\": \"user0\", \"email\": \"user0@gmail.com\", \"password\": \"blingblong\"},\n",
+    "    \"1\": {\"username\": \"user1\", \"email\": \"user1@gmail.com\", \"password\": \"blingblong\"},\n",
+    "    \"2\": {\"username\": \"user2\", \"email\": \"user2@gmail.com\", \"password\": \"blingblong\"},\n",
+    "    \"3\": {\"username\": \"user3\", \"email\": \"user3@gmail.com\", \"password\": \"blingblong\"},\n",
+    "    \"4\": {\"username\": \"user4\", \"email\": \"user4@gmail.com\", \"password\": \"blingblong\"},\n",
+    "    \"5\": {\"username\": \"user5\", \"email\": \"user5@gmail.com\", \"password\": \"blingblong\"},\n",
+    "    \"6\": {\"username\": \"user6\", \"email\": \"user6@gmail.com\", \"password\": \"blingblong\"}\n",
+    "}\n",
+    "\n",
     "class BearerAuth(requests.auth.AuthBase):\n",
     "    def __init__(self, token: str):\n",
     "        self.token = token\n",
@@ -37,9 +75,30 @@
     "        r.headers[\"Authorization\"] = f\"Bearer {self.token}\"\n",
     "        return r\n",
     "\n",
-    "# # register a new user\n",
-    "for user in users:\n",
-    "    response = requests.post(\"http://localhost:8000/auth/register\", json=user)\n",
+    "# Register\n",
+    "if REGISTER:\n",
+    "    for user in USERS.values():\n",
+    "        response = requests.post(\"http://localhost:8000/auth/register\", json=user)\n",
+    "        print(f\"Registration of {user['username']}: {response.status_code}\")\n",
+    "        print(response)\n",
+    "\n",
+    "# Login\n",
+    "for i, user in USERS.items():\n",
+    "    response = requests.post(\"http://localhost:8000/auth/jwt/login\", data={\"username\": user[\"email\"], \"password\": user[\"password\"]})\n",
+    "    USERS[i][\"response\"] = response\n",
+    "    \n",
+    "    ## include tokens\n",
+    "    USERS[i][\"token\"] = response.json()[\"access_token\"]\n",
+    "    USERS[i][\"session\"] = requests.Session()\n",
+    "    USERS[i][\"session\"].auth = BearerAuth(user[\"token\"])\n",
+    "\n",
+    "    ## Create buyer and seller profiles\n",
+    "    session = user[\"session\"]\n",
+    "    response = session.post(\"http://localhost:8000/profiles/buyers\", data={})\n",
+    "    print(response.status_code)\n",
+    "    print(response.json())\n",
+    "\n",
+    "    response = session.post(\"http://localhost:8000/profiles/sellers\", data={})\n",
     "    print(response.status_code)\n",
     "    print(response.json())"
    ]
@@ -47,34 +106,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13e3ffe7",
+   "id": "663f2ac8",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Login\n",
-    "responses = []\n",
-    "for user in users:\n",
-    "    response = requests.post(\"http://localhost:8000/auth/jwt/login\", data={\"username\": user[\"email\"], \"password\": user[\"password\"]})\n",
-    "    responses.append(response)\n",
-    "\n",
-    "print([r.status_code for r in responses])\n",
-    "\n",
-    "## include tokens\n",
-    "tokens = [r.json()[\"access_token\"] for r in responses]\n",
-    "sessions = [requests.Session() for _ in tokens]\n",
-    "for session, token in zip(sessions, tokens):\n",
-    "    session.auth = BearerAuth(token)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "infonomy",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.16"
   }
  },
